# Fortress

./: .gitignore  Fortress.code-workspace  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json  post_start.sh  update_content.sh
hourly/: README.md
hourly/backend/: air.toml  go.mod  go.sum  log.txt  main.go
hourly/backend/db/: db.go
hourly/backend/handlers/: auth.go  routes.go  tasks.go  users.go
hourly/backend/middleware/: auth.go  jwtAuth.go
hourly/backend/models/: task.go  user.go
hourly/frontend/: index.html  package-lock.json  package.json  vite.config.ts
hourly/frontend/src/: App.tsx  AuthContext.tsx  index.css  main.tsx
hourly/frontend/src/components/: Footer.tsx  Navbar.tsx  PrivateRoute.tsx
hourly/frontend/src/helpers/: api.tsx
hourly/frontend/src/pages/: About.tsx  Home.tsx  Login.tsx  Register.tsx  TaskDetails.tsx  UserProfile.tsx
templates/microservices/: generate_proto.zsh  go.mod  service.proto  test_msg.zsh
templates/microservices/cmd/: main.go
templates/microservices/proto/: service.pb.go  service_grpc.pb.go
tutorial/cmd/: main.go
tutorial/internal/: tutorial.go  tutorial_test.go
